# api

./: README.md  create_admin.py  create_tables.py  data_loader.py  index.html  main.py  models.py  movie_api.db  package-lock.json  package.json  pyproject.toml  railway.json  replit.md  requirements.txt  run_migration.py  test_api.py  tsconfig.json  tsconfig.node.json  vite.config.ts
api/: admin_routes.py  dev_routes.py
attached_assets/: Pasted-INFO-Will-watch-for-changes-in-these-directories-home-runner-workspace-INFO-Uvicorn-1755338125322_1755338125323.txt  Pasted-Phase-2-Backend-Enhancements-API-Key-System-1-API-Key-Authentication-Each-developer-gets-a-un-1755250975487_1755250975489.txt  Pasted-Phase-3-Upgrade-the-existing-FastAPI-Movie-TV-API-Phase-2-into-a-real-time-production-ready-syst-1755257991188_1755257991190.txt  Pasted-Warning-DATABASE-URL-not-set-Using-default-local-PostgreSQL-URL-Traceback-most-recent-call-last-1755332507914_1755332507915.txt  Pasted-You-are-building-a-Movie-API-Developer-Portal-Website-with-frontend-backend-The-project-must-in-1755331840810_1755331840812.txt  Pasted-cess-SpawnProcess-1-Traceback-most-recent-call-last-File-nix-store-7d088dip86hlzri9sk0h78b-1756219930540_1756219930542.txt
auth/: email.py  security.py
data/: movies.csv
db/: clean_migration.py  database.py  migration.py  migration_v3.py  models_v3.py  services.py
middleware/: auth.py
src/: App.tsx  index.css  main.tsx
src/context/: AuthContext.tsx
src/pages/: AdminDashboard.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  (+1 more)
templates/: index.html
(+12 files in other folders)
